1) add / and | parse
2) fix letter

--- a/MultiLanguage/languages/RU/dictionaries/Quests.json
+++ b/MultiLanguage/languages/RU/dictionaries/Quests.json
@@ -112,7 +112,7 @@
   "Carving Pumpkins": "Резьба на тыкве",
   "Caroline wants to carve a pumpking with her daughter. She asked you to bring her one from the farm.": "Кэролайн хочет, чтобы Вы принесли тыкву для ее дочери. Она просит принести одну такую с Вашей фермы.",
   "Bring Caroline a pumpkin.": "Принести Кэролайн тыкву.",
-  "Oh, the pumpkin! It's a good one... Abigail will be so happy when she sees this. Thanks, @!$h": "Ох, тыква! А она хороша... Эбигейл будет так счастлива когда увидит ее. Спасибо, @!$h",
+  "Oh, the pumpkin! It's a good one... Abigail will be so happy when she sees this. Thanks, @player!$h": "Ох, тыква! А она хороша... Эбигейл будет так счастлива когда увидит ее. Спасибо, @player!$h",
   "Catch A Squid": "Поймать кальмара",
   "Willy is challenging you to catch a squid. He says you can fish them from the ocean on winter nights.": "Для Вилли является сложной задачей поймать кальмара. Он говорит, что его можно поймать в океане зимней ночью.",
   "Bring Willy a squid.": "Принести Вилли кальмара.",
@@ -128,11 +128,11 @@
   "A Favor For Clint": "Одолжение для Клинта",
   "Clint got a new hammer and he wants to test it out on a variety of metals.": "Клинт получил новый молоток, и он хочет проверить его на различные металлы.",
   "Bring Clint an Iron Bar.": "Принести Клинту железный слиток.",
-  "Hey, it's the iron bar I asked for. It looks strong... perfect.#$b#Thanks, @. I appreciate this.": "Эй, это железный слиток, я искал его. Он выглядет сильным... превосходно.#$b#Спасибо, @. Благодарю.",
+  "Hey, it's the iron bar I asked for. It looks strong... perfect.#$b#Thanks, @player. I appreciate this.": "Эй, это железный слиток, я искал его. Он выглядет сильным... превосходно.#$b#Спасибо, @player. Благодарю.",
   "Robin's Request": "Просьба Робин",
   "Robin wrote to you asking for some hardwood.": "Робин написала Вам, что просит какое-то тяжелое дерево.",
   "Bring Robin 10 pieces of Hardwood.": "Принести Робин 10 кусков тяжелого дерева.",
-  "Oh, you brought it! I know I can always count on you, @.$h#$b#Mmhmm... This wood is perfect. It's exactly what I need. Thanks!": "Ох, Вы принесли его! Я знала, что всегда могу рассчитывать на вас, @.$h#$b#Хмхм... Это дерево превосходно. Это именно то, что мне нужно. Спасибо!",
+  "Oh, you brought it! I know I can always count on you, @player.$h#$b#Mmhmm... This wood is perfect. It's exactly what I need. Thanks!": "Ох, Вы принесли его! Я знала, что всегда могу рассчитывать на вас, @player.$h#$b#Хмхм... Это дерево превосходно. Это именно то, что мне нужно. Спасибо!",
   "Fish Stew": "Тушеная рыба",
   "Gus wants to make fish stew, but he needs an albacore.": "Гас хочет сделать тушеную рыбу, но он нуждается в альбакоре.",
   "Bring Gus an Albacore.": "Принести Гасу Альбакор.",
@@ -148,11 +148,11 @@
   "Pierre's Notice": "Объявление Пьера",
   "Pierre will pay \"top coin\" to whoever brings him a plate of sashimi. Apparently he's really craving the stuff.": "Пьер заплатит \"дорогими монетами\" тому кто принесет ему тарелку сашими. По-видимому он действительно его жаждет.",
   "Bring Pierre some Sashimi.": "Принести Пьеру Сашими.",
-  "It's about time! I was starting to get the shakes, I wanted this fish so bad. *munch*... Mmm, now that's good.#$b#Thanks, @.$h": "Время пришло! Я начинаю трясти, я надеюсь, что эта рыба не такая плохая. *жует*... Ммм, а ничего так.#$b#Спасибо, @.$h",
+  "It's about time! I was starting to get the shakes, I wanted this fish so bad. *munch*... Mmm, now that's good.#$b#Thanks, @player.$h": "Время пришло! Я начинаю трясти, я надеюсь, что эта рыба не такая плохая. *жует*... Ммм, а ничего так.#$b#Спасибо, @player.$h",
   "Aquatic Research": "Водные исследования",
   "Demetrius is studying the toxin levels of the local pufferfish. He'd like you to bring him one.": "Деметрий изучает уровень токсина местной рыбы Фугу. Он хотел бы, чтобы Вы принесли ему одну.",
   "Bring Demetrius a Pufferfish.": "Принести Деметрийу рыбу Фугу.",
-  "There you are. The specimen looks perfect. I'm going to get it on ice straight away. Thanks, @!": "Вот ты где. Образец выглядет отлично. Я собираюсь заморозить его сразу. Спасибо, @!",
+  "There you are. The specimen looks perfect. I'm going to get it on ice straight away. Thanks, @player!": "Вот ты где. Образец выглядет отлично. Я собираюсь заморозить его сразу. Спасибо, @player!",
   "A Soldier's Star": "Солдатская звезда",
   "Kent wants to give his wife a starfruit for their anniversary.": "Кент хочет дать своей жене звёздный фрукт на свой юбилей.",
   "Bring Kent a Starfruit.": "Принести Кенту звёздный фрукт.",
@@ -172,7 +172,7 @@
   "Staff Of Power": "Посох могущества",
   "The Wizard is creating a staff of phenomenal power. Who knows what it's for. He needs an iridium bar to finish it.": "Волшебник создает предмет феноменальной мощности. Кто знает, что это может быть. Ему нужен слиток иридия, чтобы закончить дело.",
   "Bring Wizard an Iridium Bar.": "Принести Волшебнику Слиток иридия.",
-  "Ah, precious iridium. You've done well, @. You have my gratitude. Now, leave.": "Ах, драгоценный иридий. Вы справились отлично, @. Я даю вам свою благодарность. Теперь, ухади.",
+  "Ah, precious iridium. You've done well, @player. You have my gratitude. Now, leave.": "Ах, драгоценный иридий. Вы справились отлично, @player. Я даю вам свою благодарность. Теперь, ухади.",
   "Catch a Lingcod": "Поймать Терпуг",
   "Willy is challenging you to catch a Lingcod.": "Для Вилли является сложным испытанием поймать Терпуг.",
   "Bring Willy a Lingcod.": "Принести Вилли Терпуг.",
